--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -5,3 +5,12 @@ add_subdirectory(util)
 
 # add_library(mpqc)
 # target_link_libraries(mpqc util)
+
+# library headers
+file(GLOB_RECURSE headers RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} chemistry/*.h math/*.h util/*h)
+foreach (_file ${headers})
+  get_filename_component(_path ${_file} PATH)
+  #message(STATUS "gonna installl ${_file} in include/mpqc/${_path}" )
+  install(FILES ${_file} DESTINATION include/mpqc/${_path})
+endforeach()
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/scconfig.h DESTINATION include/mpqc)
