--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,6 +271,7 @@ set(LINK_LIBRARIES "")
 if (HAVE_LIBINT2)
   list(APPEND LINK_LIBRARIES ${LIBINT2_LIBRARY})
 endif()
+list(APPEND LINK_LIBRARIES ${LIBRYSQ_LIBRARY})
 list(APPEND LINK_LIBRARIES ${Boost_LIBRARIES})
 list(APPEND LINK_LIBRARIES ${LAPACK_LIBRARIES})
 list(APPEND LINK_LIBRARIES ${BLAS_LIBRARIES})
