--- a/src/lib/math/distarray4/CMakeLists.txt
+++ b/src/lib/math/distarray4/CMakeLists.txt
@@ -1,10 +1,16 @@
 # distarray4 library
 
-add_library(distarray4 OBJECT
+set(sources
   distarray4.cc
   distarray4_memgrp.cc
-#  distarray4_mpiiofile.cc
-  distarray4_node0file.cc)
+  distarray4_node0file.cc
+)
+
+if (HAVE_MPI)
+  list(APPEND sources distarray4_mpiiofile.cc)
+endif()
+
+add_library(distarray4 OBJECT ${sources})
 
 # tests
 
