Eliminated IntegralCints from input files.
--HG--
extra : rebase_source : 0353c3e5e6146982792ddb9574443f969afc615a

--- a/src/bin/mpqc/sample/mp2r12.in
+++ b/src/bin/mpqc/sample/mp2r12.in
@@ -30,13 +30,13 @@ mpqc: (
     stdapprox = "A'"
     nfzc = 1
     memory = 16000000
-    integrals<IntegralCints>:()
+    integrals<IntegralLibint2>:()
     % reference wavefunction
     reference<CLHF>: (
       molecule = $:molecule
       basis = $:basis
       memory = 16000000
-      integrals<IntegralCints>:()
+      integrals<IntegralLibint2>:()
     )
   )
 )
