--- a/test/mbpt/mbpt_mp2r12_c6h6_multipass.in
+++ b/test/mbpt/mbpt_mp2r12_c6h6_multipass.in
@@ -26,7 +26,7 @@ basis<GaussianBasisSet>: (
   molecule = $:molecule
 )
 mpqc: (
-  integrals<IntegralCints>: ()
+  integrals<IntegralLibint2>: ()
   checkpoint = no
   savestate = no
   restart = no
