--- a/test/ref/mp2r12_mp2r12slashc00ccpvdzaugccpvdzc2v.in
+++ b/test/ref/mp2r12_mp2r12slashc00ccpvdzaugccpvdzc2v.in
@@ -38,7 +38,7 @@ mpqc: (
     memory = 32000000
     stdapprox = "C"
     corr_factor = "R12"
-    integrals<IntegralCints>: ()
+    integrals<IntegralLibint2>: ()
     nfzc = 0
     aux_basis<GaussianBasisSet>: (
       name = "aug-cc-pVDZ"
