--- a/test/ref/psiccsdpt2r12_psiccsd_tr12ccpvdzaugccpvdzc2v.in
+++ b/test/ref/psiccsdpt2r12_psiccsd_tr12ccpvdzaugccpvdzc2v.in
@@ -56,7 +56,7 @@ mpqc: (
 
     stdapprox = "C"
     corr_factor = "R12"
-    integrals<IntegralCints>: ()
+    integrals<IntegralLibint2>: ()
     nfzc = 0
     aux_basis<GaussianBasisSet>: (
       name = "aug-cc-pVDZ"
