--- a/test/mbpt/mbpt_mp2r12_ne2_dyn.in
+++ b/test/mbpt/mbpt_mp2r12_ne2_dyn.in
@@ -16,7 +16,7 @@ basis<GaussianBasisSet>: (
   molecule = $:molecule
 )
 mpqc: (
-  integrals<IntegralCints>: ()
+  integrals<IntegralLibint2>: ()
   checkpoint = no
   savestate = no
   restart = no
