--- a/test/methods/mp2r12ap_cabs+.in
+++ b/test/methods/mp2r12ap_cabs+.in
@@ -34,16 +34,16 @@
      store_ints = posix
      nfzc = 1
      debug = 2
-     integrals<IntegralCints>: ()
+     integrals<IntegralLibint2>: ()
      reference<CLHF>: (
        molecule = $:molecule
        basis = $:basis
        memory = 24000000
-       integrals<IntegralCints>: ()
+       integrals<IntegralLibint2>: ()
        guess_wavefunction<HCoreWfn>: (
          molecule = $:molecule
          basis = $:basis
-         integrals<IntegralCints>: ()
+         integrals<IntegralLibint2>: ()
        )
      )
    )
