--- a/test/ref/mbpt_mp2r12_ne2.in
+++ b/test/ref/mbpt_mp2r12_ne2.in
@@ -16,7 +16,7 @@ basis<GaussianBasisSet>: (
   molecule = $:molecule
 )
 mpqc: (
-  integrals<IntegralCints>: ()
+  integrals<IntegralLibint2>: ()
   checkpoint = no
   savestate = no
   restart = no
