--- a/src/lib/mpqc_config.h.in
+++ b/src/lib/mpqc_config.h.in
@@ -237,7 +237,7 @@
 #cmakedefine HAVE_LIBINT2
 
 /* Define what is the normalization convention of IntegralLibint2, 1(cca) or 2(exact).  */
-#cmakedefine INTEGRALLIBINT2_NORMCONV
+#cmakedefine INTEGRALLIBINT2_NORMCONV @INTEGRALLIBINT2_NORMCONV@
 #define INTEGRALLIBINT2_NORMCONV_CCA 1
 #define INTEGRALLIBINT2_NORMCONV_EXACT 2
 
