--- a/src/lib/mpqc/CMakeLists.txt
+++ b/src/lib/mpqc/CMakeLists.txt
@@ -24,11 +24,11 @@ install(FILES range.hpp DESTINATION include/mpqc)
 
 # tests
 
-add_executable(test-mpqc EXCLUDE_FROM_ALL test.cpp)
+# add_executable(test-mpqc EXCLUDE_FROM_ALL test.cpp)
 
-target_link_libraries(test-mpqc ${Boost_LIBRARIES})
-#target_link_libraries(test-mpqc ${LAPACK_LIBRARIES})
-target_link_libraries(test-mpqc ${PYTHON_LIBRARIES})
-target_link_libraries(test-mpqc ${LIBRARIES})
-target_link_libraries(test-mpqc ${CMAKE_DL_LIBS})
+# target_link_libraries(test-mpqc ${Boost_LIBRARIES})
+# #target_link_libraries(test-mpqc ${LAPACK_LIBRARIES})
+# target_link_libraries(test-mpqc ${PYTHON_LIBRARIES})
+# target_link_libraries(test-mpqc ${LIBRARIES})
+# target_link_libraries(test-mpqc ${CMAKE_DL_LIBS})
 
