Minor fixes to export includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -353,9 +353,12 @@ list(REMOVE_ITEM
 ) 
 
 set(MPQC_CPP_FLAGS "${CMAKE_CPP_FLAGS}")
-foreach (_dir ${MPQC_INCLUDE_DIRECTORIES} ${CMAKE_INSTALL_PREFIX}/include/mpqc)
+foreach (_dir ${MPQC_INCLUDE_DIRECTORIES})
   set(MPQC_CPP_FLAGS "${MPQC_CPP_FLAGS} -I${_dir}")
 endforeach()
+# MPQC includes
+set(MPQC_CPP_FLAGS "-I${CMAKE_INSTALL_PREFIX}/include/ ${MPQC_CPP_FLAGS}")
+set(MPQC_CPP_FLAGS "-I${CMAKE_INSTALL_PREFIX}/include/mpqc ${MPQC_CPP_FLAGS}")
 #message(STATUS "MPQC_CPP_FLAGS = ${MPQC_CPP_FLAGS}")
 
 CONFIGURE_FILE(
