To make MPQC and MADNESS BLAS/LAPACK prototypes to match, make MPQC use MADNESS' long/int instead of (correct!) int64_t/int32_t for Fortran integer types. Converting MADNESS to int64_t/int32_t is not an option ... too much code uses long explicitly (ugh!).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,12 @@ set(MPQC_BUILDID alpha)
 set(MPQC_VERSION "${MPQC_MAJOR_VERSION}.${MPQC_MINOR_VERSION}.${MPQC_MICRO_VERSION}")
 set(MPQC_VERSION "${MPQC_VERSION}-${MPQC_BUILDID}")
 
+include(CheckTypeSize)
+check_type_size(int64_t C_TYPE_INT64_T)
+check_type_size(int32_t C_TYPE_INT32_T)
+check_type_size(long C_TYPE_LONG)
+check_type_size(int C_TYPE_INT)
+
 check_include_files(stdint.h HAVE_STDINT_H)
 check_include_files(dlfcn.h HAVE_DLFCN_H)
 check_include_files(sys/time.h HAVE_SYS_TIME_H)
@@ -167,7 +173,7 @@ CHECK_FUNCTION_EXISTS (ctime             HAVE_CTIME)
 set(BLAS_F77_INTEGER_WIDTH 4)
 if(INTEGER8) 
   set(BLAS_F77_INTEGER_WIDTH 8)
-endif()  
+endif()
 
 include(FortranCInterface)
 FortranCInterface_VERIFY(CXX)
