1) Disabled new PT2R12 code for now 2) GAMESS interface will now require a separate pt2r12 executable.

--- a/src/bin/pt2r12/CMakeLists.txt
+++ b/src/bin/pt2r12/CMakeLists.txt
@@ -1,27 +1,19 @@
 
 if (GAMESS)
 
-  add_library(
-    pt2r12gamess
-    pt2r12.cc
-    moinfo.cc
-    extern_pt2r12.cc 
-  )
+  set(CMAKE_CXX_FLAGS "-DPT2R12GAMESS ${CMAKE_CXX_FLAGS}")
+  
+endif()
 
-  set(CMAKE_CPP_FLAGS "-DPT2R12GAMESS -DSKIP_MAIN ${CMAKE_CPP_FLAGS}")
-  install(TARGETS pt2r12gamess ARCHIVE DESTINATION lib)
-
-else()
-
-  set(executable pt2r12)
-  add_executable(
+set(executable pt2r12)
+add_executable(
     ${executable}
     pt2r12.cc
     moinfo.cc
     extern_pt2r12.cc
-  )
+)
 
-  target_link_libraries(
+target_link_libraries(
     ${executable}
     mpqcinit
     chemistry
@@ -31,13 +23,11 @@ else()
     math
     util
     ${LINK_LIBRARIES}
-  )
+)
 
-  install(TARGETS ${executable} DESTINATION bin)
+install(TARGETS ${executable} DESTINATION bin)
 
   #set(headers extern_pt2r12.h moinfo.h molden_moinfo.h)
   #foreach (_file ${headers})
   #  install(FILES ${_file} DESTINATION include/mpqc/pt2r12)
   #endforeach()
-
-endif()
