Fixes to accomodate Fortran integers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,17 @@ if (NOT CMAKE_Fortran_COMPILER)
    message(FATAL_ERROR "Fortran compiler not found")
 endif()
 
+set(BLAS_F77_INTEGER_WIDTH 4)
+if(INTEGER8) 
+  set(BLAS_F77_INTEGER_WIDTH 8)
+  if (CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fdefault-integer-8")
+  elseif (CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -i8")
+  else()
+    message(FATAL_ERROR "Don't know how to set INTEGER*8 for '${CMAKE_Fortran_COMPILER_ID}' compiler")
+  endif()
+endif()
 
 # extra cmake files are shipped with MPQC
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/modules/")
@@ -169,11 +180,6 @@ CHECK_FUNCTION_EXISTS (getrusage         HAVE_GETRUSAGE)
 CHECK_FUNCTION_EXISTS (lstat             HAVE_LSTAT)
 CHECK_FUNCTION_EXISTS (time              HAVE_TIME)
 CHECK_FUNCTION_EXISTS (ctime             HAVE_CTIME)
-
-set(BLAS_F77_INTEGER_WIDTH 4)
-if(INTEGER8) 
-  set(BLAS_F77_INTEGER_WIDTH 8)
-endif()
 
 include(FortranCInterface)
 FortranCInterface_VERIFY(CXX)
